--- a/assign4/app/src/main/res/values/strings.xml
+++ b/assign4/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">assign4</string>
+    <string name="app_name">Amazon</string>
+    <string name="amazonLogo">Amazon Logo</string>
+    <string name="label">Sign in to <b>Zappos.com</b> using your Amazon account</string>
+    <string name="sign_in">Sign In</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="username">Email (phone for mobile accounts)</string>
+    <string name="password">Amazon password</string>
+    <string name="show_password">Show Password</string>
+    <string name="keep_sign">Keep me signed in.</string>
+    <string name="details">Details</string>
+    <string name="new_amazon">New to Amazon?</string>
+    <string name="create_new">Create a new Account</string>
+    <string name="terms">Conditions of Use Privacy Notice</string>
+    <string name="copy_right">\u00A9 1996-2017, Amazon.com, Inc. or its affiliates</string>
 </resources>
